fixed hover so left most cards won't go off screen

--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ html {
 
 .card:hover,
 .type:hover {
-  transform: scale(1.5);
+  transform: scale(1.5) translateX(35px);
 }
 .card {
   transition: transform 0.2s;
